Fixed horizontal scroll issue

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,6 @@
 html, body {
   min-height: 100%;
+  overflow-x: hidden
 }
 
 body{
